# toni-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
integration-tests/: Cargo.toml  README.md
integration-tests/src/: lib.rs
integration-tests/tests/: async_controllers.rs  attribute_syntax.rs  config_injection.rs  constructor_di.rs  controller_constructor_di.rs  controller_scopes.rs  custom_init.rs  enhancers_combined.rs  extensions_and_from_request.rs  extractors.rs  global_enhancers.rs  global_modules.rs  inject_token_override.rs  instance_injection.rs  owned_fields.rs  provide_unified.rs  provider_alias.rs  provider_factory.rs  provider_token.rs  provider_value.rs  provider_variants_combined.rs  scope_bubbling.rs  scope_validation.rs  scopes.rs  simple_provider.rs  static_methods.rs  transient_scope.rs
src/: main.rs
src/app/: app.controller.rs  app.service.rs
toni/: Cargo.toml  README.md
toni-actix/: Cargo.toml
toni-actix/src/: actix_adapter.rs  actix_route_adapter.rs  lib.rs
toni-actix/tests/: integration_test.rs
toni-async-graphql/: Cargo.toml  README.md
toni-async-graphql/examples/: hello_world.rs  with_auth.rs
toni-async-graphql/src/: context_builder.rs  graphql_controller.rs  graphql_module.rs  graphql_service.rs  graphql_service_manager.rs  lib.rs  playground.html
toni-axum/: Cargo.toml
toni-axum/src/: axum_adapter.rs  axum_route_adapter.rs  lib.rs
toni-axum/tests/: integration_test.rs
toni-cli/: Cargo.toml  README.md
toni-cli/src/: main.rs
toni-cli/src/app/user/: mod.rs  user.controller.rs  user.module.rs  user.service.rs
toni-cli/src/commands/: generate.rs  new.rs
toni-cli/src/templates/generate/: mod.rs  resource.controller.rs  resource.module.rs  resource.service.rs
toni-cli/src/templates/new/: Cargo.toml  Cargo.txt
toni-cli/src/templates/new/src/: main.rs
toni-cli/src/templates/new/src/app/: app.controller.rs  app.module.rs  app.service.rs  mod.rs
toni-config/: Cargo.toml
toni-config/src/: config_service.rs  lib.rs
toni-config/tests/: async_controller_test.rs  builtin_request_provider_test.rs  controller_scopes_test.rs  custom_init_test.rs  e2e_test.rs  extensions_and_from_request_test.rs  global_module_test.rs  integration_test.rs  provider_scope_validation_test.rs  scope_bubbling_test.rs  simple_provider_test.rs  test_instance_injection.rs  test_scopes.rs  transient_scope_test.rs
toni-core/: Cargo.toml
toni-core/src/: scanner.rs
toni-core/src/adapter/: axum_adapter.rs  mod.rs
toni-core/src/http_helpers/: mod.rs
toni-core/src/traits_helpers/: controller.struct.rs  module_metadata.struct.rs
toni-juniper/: Cargo.toml  README.md
toni-juniper/examples/: hello_world.rs  with_auth.rs
toni-juniper/src/: context_builder.rs  graphql_controller.rs  graphql_module.rs  graphql_service.rs  graphql_service_manager.rs  lib.rs
toni-macros/: Cargo.toml  README.md
toni-macros/src/: lib.rs
toni-macros/src/config_macro/: mod.rs
toni-macros/src/controller/: controller.rs  controller_struct.rs  impl_functions.rs  manager.rs  mod.rs
toni-macros/src/controller_macro/: controller.rs  controller_struct.rs  extractor_params.rs  impl_functions.rs  instance_injection.rs  manager.rs  mod.rs  output.rs
toni-macros/src/enhancer/: enhancer.rs  mod.rs  use_guards.rs  use_interceptors.rs  use_pipes.rs
toni-macros/src/markers_params/: extracts_marker_params.rs  get_marker_params.rs  mod.rs  remove_marker_controller_fn.rs
toni-macros/src/middleware_macro/: middleware_struct.rs  mod.rs
toni-macros/src/module_macro/: mod.rs  module_struct.rs
toni-macros/src/provider/: impl_functions.rs  output.rs  provider.rs  provider_struct.rs
toni-macros/src/provider_macro/: instance_injection.rs  manager.rs  mod.rs  output.rs  provider.rs  provider_struct.rs
toni-macros/src/provider_variants/: alias_provider.rs  factory_provider.rs  mod.rs  token_provider.rs  unified_provide.rs  value_provider.rs
toni-macros/src/shared/: dependency_info.rs  generate_make_instances.rs  metadata_info.rs  mod.rs  scope_parser.rs  token_parser.rs
toni-macros/src/utils/: controller_utils.rs  create_struct_name.rs  extracts.rs  mod.rs  modify_impl_function_body.rs  modify_return_body.rs  snake_to_upper.rs  types.rs
toni/examples/: middleware_examples.rs
toni/src/: builtin_module.rs  lib.rs  provider_scope.rs  request.rs  scanner.rs  toni_application.rs  toni_factory.rs
toni/src/adapter/: axum_adapter.rs  axum_route_adapter.rs  http_adapter.rs  mod.rs  route_adapter.rs
toni/src/di/: mod.rs  token.rs
toni/src/extractors/: body.rs  json.rs  mod.rs  path.rs  query.rs  validated.rs
toni/src/http_helpers/: body.enum.rs  extensions.rs  http_method.enum.rs  http_request.struct.rs  http_response.enum.rs  into_response.rs  mod.rs
toni/src/injector/: container.rs  context.rs  dependency_graph.rs  instance_loader.rs  instance_wrapper.rs  mod.rs  module.rs
toni/src/middleware/: builtin.rs  chain.rs  mod.rs  module_middleware.rs  route_pattern.rs
toni/src/module_helpers/: mod.rs
toni/src/router/: mod.rs  routes_resolve.rs
toni/src/structs_helpers/: enhancer.rs  mod.rs
toni/src/traits_helpers/: controller.rs  controller.struct.rs  guard.rs  interceptor.rs  middleware.rs  mod.rs  module_metadata.rs  pipe.rs  provider.rs
toni/src/traits_helpers/validator/: validate.rs
tonirs-core/: Cargo.toml
tonirs-core/src/: lib.rs  scanner.rs  toni_application.rs  toni_factory.rs
tonirs-core/src/adapter/: axum_adapter.rs  axum_route_adapter.rs  http_adapter.rs  mod.rs  route_adapter.rs
tonirs-core/src/http_helpers/: body.enum.rs  http_method.enum.rs  http_response.enum.rs  into_response.rs
tonirs-core/src/injector/: container.rs  dependency_graph.rs  instance_loader.rs  mod.rs  module.rs
tonirs-core/src/module_helpers/: mod.rs  module_enum.rs
tonirs-core/src/router/: mod.rs  routes_resolve.rs
tonirs-core/src/traits_helpers/: controller.struct.rs  module_metadata.struct.rs  provider.struct.rs
