cargo-features = ["test-dummy-unstable"]

[workspace]
members = ["toni-core", "toni-macros", "toni-cli"]

[package]
name = "my_frame"
version = "0.1.0"
edition = "2024"
im-a-teapot = true

[dependencies]
toni-macros = { path = "./toni-macros" }
toni-core = { path = "./toni-core" }
uuid = {version = "1.11.0", features = ["v4"]}
rustc-hash = "2.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
