[package]
name = "toni-actix"
version = "0.1.0"
edition = "2021"
description = "Actix-web adapter for the Toni framework"
license = "MIT"
keywords = ["toni", "actix", "actix-web", "web", "framework", "adapter"]
categories = ["web-programming::http-server"]

[dependencies]
toni = { path = "../toni" }
actix-web = "4"
anyhow = "1.0"
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1.86"
rustc-hash = "2.1"
tokio = "1"
