[package]
name = "toni-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "toni"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
