[package]
name = "toni-core"
version = "0.1.0"
edition = "2024"
keywords = ["http", "web", "framework"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "Dependency injection, route resolver and traits for Toni"
license = "MIT"
repository = "https://github.com/monterxto/toni-rs"
homepage = "https://github.com/monterxto/toni-rs"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
rustc-hash = "2.1"
anyhow = "1.0.95"

[dev-dependencies]
reqwest = { version = "0.12.11", features = ["json"] }

