[package]
name = "toni-macros"
version = "0.1.0"
edition = "2024"

[lib]
name = "toni_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.94", features = ["visit-mut", "default"] }
rustc-hash = "2.1"
linkme = "0.3.31"
toni-core = { path = "../toni-core" }
