[package]
name = "tonirs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
rustc-hash = "2.1"
uuid = {version = "1.11.0", features = ["v4"]}
linkme = "0.3.31"
anyhow = "1.0.95"

[dev-dependencies]
reqwest = { version = "0.12.11", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }

